<resources>
    <string name="app_name">金银花</string>
    <string name="channel_name">Dq0001</string>
    <string name="name_loan">借款</string>
    <string name="repayment_loan">还款</string>
    <string name="name_personal_center">我的</string>

    <string name="loan_name_loan_money">借款金额</string>
    <string name="loan_name_loan_arrival">到账金额</string>
    <string name="loan_name_loan_day">借款天数</string>
    <string name="loan_name_loan_money_red">马上领取98元新人现金红包</string>
    <string name="loan_name_loan_should_also">到期应还:</string>
    <string name="loan_name_loan_next_step">下一步</string>
    <string name="loan_name_loan_charge">服务费:</string>
    <string name="loan_name_loan_coupon">优惠券:</string>
    <string name="loan_name_loan_interest">借款利息:</string>
    <string name="loan_name_loan_student">不向学生提供服务</string>
    <string name="loan_name_loan_fastest_loan">温馨提示:完成以下认证,最快10分钟完成放贷</string>
    <string name="loan_name_loan_personal_data">个人资料</string>
    <string name="loan_name_loan_personal_information">个人资料</string>
    <string name="loan_name_loan_personal_effective">请保证个人信息真实有效</string>
    <string name="loan_name_loan_personal_no_authentication">未认证</string>
    <string name="loan_name_loan_personal_authentication">已填写</string>
    <string name="loan_name_loan_personal_information_info">个人信息</string>
    <string name="loan_name_loan_personal_information_work">工作信息</string>
    <string name="loan_name_loan_personal_information_contacts">紧急联系人</string>
    <string name="loan_name_loan_personal_information_info_qq">QQ号码</string>
    <string name="loan_name_loan_personal_information_info_education">学历</string>
    <string name="loan_name_loan_personal_information_info_city">现居城市</string>
    <string name="loan_name_loan_personal_information_info_province">现居省份</string>
    <string name="loan_name_loan_personal_information_info_detailed">详细地址</string>
    <string name="loan_name_loan_personal_information_info_det">请输入您的详细地址</string>
    <string name="loan_name_loan_personal_information_info_marriage">婚姻状况</string>
    <string name="loan_name_loan_personal_information_work_company">单位名称</string>
    <string name="loan_name_loan_personal_information_work_comp">请输入单位名称</string>
    <string name="loan_name_loan_personal_information_work_province">单位所在省</string>
    <string name="loan_name_loan_personal_information_work_city">单位所在市</string>
    <string name="loan_name_loan_personal_information_work_detailed">单位详细地址</string>
    <string name="loan_name_loan_personal_information_work_det">区/街道/号</string>
    <string name="loan_name_loan_personal_information_work_occupation">职业</string>
    <string name="loan_name_loan_personal_information_work_income">月收入</string>
    <string name="loan_name_loan_personal_information_work_new">发薪日</string>
    <string name="loan_name_loan_personal_information_work_phone">单位电话</string>
    <string name="loan_name_loan_personal_information_work_pho">选填 可提高通过率</string>
    <string name="loan_name_loan_personal_information_urgent_relatives">直系亲属</string>
    <string name="loan_name_loan_personal_information_urgent_name">姓名</string>
    <string name="loan_name_loan_personal_information_urgent_nam">请选择亲属联系人</string>
    <string name="loan_name_loan_personal_information_urgent_phone">手机号码</string>
    <string name="loan_name_loan_personal_information_urgent_colleague">同事朋友</string>
    <string name="loan_name_loan_number">1234567890</string>
    <string name="loan_name_loan_qq_number">请输入您的QQ号码</string>
    <string name="loan_name_loan_select">请选择</string>
    <string name="loan_name_loan_sesame_hint_name">请输入姓名</string>
    <string name="loan_name_loan_sesame_id">身份证号码</string>
    <string name="loan_name_loan_sesame_hint_id">请输入身份证号码</string>
    <string name="loan_name_loan_sesame_real">认证后无法修改,请确保真实</string>
    <string name="loan_name_loan_sesame_authentication">前往认证</string>
    <string name="loan_name_loan_sesame">芝麻授权</string>
    <string name="loan_name_loan_sesame_ing">正在认证...</string>
    <string name="loan_name_loan_sesame_no">该实名信息已被认证</string>
    <string name="loan_name_loan_operator_text">运营商认证可能需要2-3分钟,请您耐心等待</string>
    <string name="loan_name_loan_operator_cmcc">中国移动</string>
    <string name="loan_name_loan_operator_telecom">中国电信</string>
    <string name="loan_name_loan_operator_unicom">中国联通</string>
    <string name="loan_name_loan_operator_service">服务商密码</string>
    <string name="loan_name_loan_operator_hint_service">请输入服务商密码</string>
    <string name="loan_name_loan_operator_phone_verification">注册手机号验证</string>
    <string name="loan_name_loan_operator_unicom_text">温馨提示\n&#160;&#160;联通手机提交认证仅需要服务密码即可\n&#160;&#160;忘记密码可以拨打10010人工客服重置密码\n&#160;&#160;认证需要2-3分钟,请耐心等待\n&#160;&#160;若认证失败,提示"系统繁忙",建议您在不同时间段进行多次尝试\n&#160;&#160;运营商认证失败怎么办?</string>

    <string name="loan_name_loan_operator_cmcc_text">温馨提示\n&#160;&#160;移动手机提交认证仅需要服务密码即可\n&#160;&#160;忘记密码可以拨打10086人工客服重置密码\n&#160;&#160;认证需要2-3分钟,请耐心等待\n&#160;&#160;若认证失败,提示"系统繁忙",建议您在不同时间段进行多次尝试\n&#160;&#160;运营商认证失败怎么办?</string>

    <string name="loan_name_loan_operator_telecom_text">温馨提示\n&#160;&#160;电信手机提交认证仅需要服务密码即可\n&#160;&#160;忘记密码可以拨打10000工客服重置密码\n&#160;&#160;认证需要2-3分钟,请耐心等待\n&#160;&#160;若认证失败,提示"系统繁忙",建议您在不同时间段进行多次尝试\n&#160;&#160;运营商认证失败怎么办?</string>

    <string name="loan_name_loan_bank_effective">请填写本人的银行卡信息</string>
    <string name="loan_name_loan_bank_personal">持卡人</string>
    <string name="loan_name_loan_bank_opening">开户行</string>
    <string name="loan_name_loan_bank_number">银行卡号</string>
    <string name="loan_name_loan_bank_hint_number">请输入您的银行卡号</string>
    <string name="loan_name_loan_bank">绑定银行卡</string>
    <string name="loan_name_loan_help">帮助中心</string>
    <string name="loan_name_loan_password">修改密码</string>
    <string name="loan_name_loan_law">法律知识</string>
    <string name="loan_name_loan_we">关于我们</string>
    <string name="loan_name_loan_customer">联系客服</string>
    <string name="loan_name_loan_my_bank">收款银行卡</string>
</resources>
