<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/common_beige"
        android:gravity="center|left"
        android:padding="@dimen/common_10dp">

        <com.jyh.com.jyh.View.MyTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_20dp"
            android:text="@string/loan_name_loan_bank_effective"
            android:textColor="@color/common_red"
            android:textSize="@dimen/common_14dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_10dp"
        android:layout_marginTop="@dimen/common_10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/common_20dp">

            <com.jyh.com.jyh.View.MyTextview
                android:layout_width="@dimen/common_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loan_name_loan_bank_personal"
                android:textColor="@color/common_personal_information_text"
                android:textSize="@dimen/common_16dp" />

            <com.jyh.com.jyh.View.MyEditText
                android:id="@+id/bind_bank_personal"
                android:layout_width="@dimen/common_0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common_20dp"
                android:layout_weight="1.6"
                android:background="@color/transparent"
                android:digits="@string/loan_name_loan_number"
                android:gravity="left|center"
                android:hint="@string/loan_name_loan_sesame_hint_name"
                android:inputType="phone|number"
                android:singleLine="true"
                android:textColorHint="@color/common_personal_information"
                android:textSize="@dimen/common_14dp" />

            <ImageView
                android:id="@+id/bind_bank_personal_image"
                android:layout_width="13dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/common_5dp"
                android:src="@mipmap/ic_personal_data_information_error"
                android:visibility="gone" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_0_5dp"
            android:layout_marginLeft="@dimen/common_20dp"
            android:layout_marginRight="@dimen/common_20dp"
            android:src="@color/common_personal_grey_bot" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/common_20dp">

            <com.jyh.com.jyh.View.MyTextview
                android:layout_width="@dimen/common_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loan_name_loan_sesame_id"
                android:textColor="@color/common_personal_information_text"
                android:textSize="@dimen/common_16dp" />

            <com.jyh.com.jyh.View.MyEditText
                android:id="@+id/bind_bank_id"
                android:layout_width="@dimen/common_0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common_20dp"
                android:layout_weight="1.5"
                android:background="@color/transparent"
                android:digits="@string/loan_name_loan_number"
                android:gravity="left|center"
                android:hint="@string/loan_name_loan_sesame_hint_id"
                android:inputType="phone|number"
                android:singleLine="true"
                android:textColorHint="@color/common_personal_information"
                android:textSize="@dimen/common_14dp" />

            <ImageView
                android:id="@+id/bind_bank_id_image"
                android:layout_width="13dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/common_5dp"
                android:src="@mipmap/ic_personal_data_information_error"
                android:visibility="gone" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_0_5dp"
            android:layout_marginLeft="@dimen/common_20dp"
            android:layout_marginRight="@dimen/common_20dp"
            android:src="@color/common_personal_grey_bot" />

        <LinearLayout
            android:id="@+id/bind_bank_opening_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/common_20dp">

            <com.jyh.com.jyh.View.MyTextview
                android:layout_width="@dimen/common_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loan_name_loan_bank_opening"
                android:textColor="@color/common_personal_information_text"
                android:textSize="@dimen/common_16dp" />

            <com.jyh.com.jyh.View.MyTextview
                android:id="@+id/bind_bank_opening_text"
                android:layout_width="@dimen/common_0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common_20dp"
                android:layout_weight="1.3"
                android:gravity="left|center"
                android:textSize="@dimen/common_16dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/common_5dp"
                android:src="@mipmap/ic_personal_data_right" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_0_5dp"
            android:layout_marginLeft="@dimen/common_20dp"
            android:layout_marginRight="@dimen/common_20dp"
            android:src="@color/common_personal_grey_bot" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/common_20dp">

            <com.jyh.com.jyh.View.MyTextview
                android:layout_width="@dimen/common_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loan_name_loan_bank_number"
                android:textColor="@color/common_personal_information_text"
                android:textSize="@dimen/common_16dp" />

            <com.jyh.com.jyh.View.MyEditText
                android:id="@+id/bind_bank_opening_number"
                android:layout_width="@dimen/common_0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common_20dp"
                android:layout_weight="1.5"
                android:background="@color/transparent"
                android:digits="@string/loan_name_loan_number"
                android:gravity="left|center"
                android:hint="@string/loan_name_loan_bank_hint_number"
                android:inputType="phone|number"
                android:singleLine="true"
                android:textColorHint="@color/common_personal_information"
                android:textSize="@dimen/common_14dp" />

            <ImageView
                android:id="@+id/bind_bank_opening_number_image"
                android:layout_width="13dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/common_5dp"
                android:src="@mipmap/ic_personal_data_information_error"
                android:visibility="gone" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_0_5dp"
            android:layout_marginLeft="@dimen/common_20dp"
            android:layout_marginRight="@dimen/common_20dp"
            android:src="@color/common_personal_grey_bot" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/common_20dp">

            <com.jyh.com.jyh.View.MyTextview
                android:layout_width="@dimen/common_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loan_name_loan_personal_information_urgent_phone"
                android:textColor="@color/common_personal_information_text"
                android:textSize="@dimen/common_16dp" />

            <com.jyh.com.jyh.View.MyTextview
                android:id="@+id/bind_bank_opening_phone_number"
                android:layout_width="@dimen/common_0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common_20dp"
                android:layout_weight="1.5"
                android:background="@color/transparent"
                android:gravity="left|center"
                android:singleLine="true"
                android:textSize="@dimen/common_14dp" />

            <ImageView
                android:layout_width="13dp"
                android:layout_height="@dimen/common_18dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/common_5dp"
                android:src="@mipmap/ic_personal_data_information_error"
                android:visibility="gone" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_0_5dp"
            android:layout_marginLeft="@dimen/common_20dp"
            android:layout_marginRight="@dimen/common_20dp"
            android:src="@color/common_personal_grey_bot" />

        <com.jyh.com.jyh.View.MyButton
            android:id="@+id/bind_bank_opening_phone_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_20dp"
            android:layout_marginRight="@dimen/common_20dp"
            android:layout_marginTop="@dimen/common_20dp"
            android:background="@drawable/button_background_color"
            android:text="@string/loan_name_loan_next_step"
            android:textColor="@color/white"
            android:textSize="@dimen/common_14dp" />

    </LinearLayout>

</LinearLayout>
