<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_20dp"
        android:layout_marginRight="@dimen/common_20dp"
        android:layout_marginTop="@dimen/common_10dp"
        android:background="@color/common_personal_information"
        android:orientation="horizontal"
        android:padding="@dimen/common_10dp">

        <com.jyh.com.jyh.View.MyTextview
            android:id="@+id/information_info_text"
            android:layout_width="@dimen/common_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/loan_name_loan_personal_information_info"
            android:textColor="@color/common_grey_data"
            android:textSize="@dimen/common_14dp" />

        <com.jyh.com.jyh.View.MyTextview
            android:id="@+id/information_work_text"
            android:layout_width="@dimen/common_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/loan_name_loan_personal_information_work"
            android:textColor="@color/common_grey_data"
            android:textSize="@dimen/common_14dp" />

        <com.jyh.com.jyh.View.MyTextview
            android:id="@+id/information_contacts_text"
            android:layout_width="@dimen/common_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/loan_name_loan_personal_information_contacts"
            android:textColor="@color/common_grey_data"
            android:textSize="@dimen/common_14dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_20dp"
        android:layout_marginRight="@dimen/common_20dp"
        android:background="@color/common_personal_information"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/information_info_image"
            android:layout_width="@dimen/common_0dp"
            android:layout_height="@dimen/common_3dp"
            android:layout_weight="1"
            android:src="@color/common_personal_information_line"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/information_work_image"
            android:layout_width="@dimen/common_0dp"
            android:layout_height="@dimen/common_3dp"
            android:layout_weight="1"
            android:src="@color/common_personal_information_line"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/information_contacts_image"
            android:layout_width="@dimen/common_0dp"
            android:layout_height="@dimen/common_3dp"
            android:layout_weight="1"
            android:src="@color/common_personal_information_line"
            android:visibility="invisible" />
    </LinearLayout>

    <!-- 个人信息-->

    <include layout="@layout/in_information_info"/>

    <!-- 工作信息-->

    <include layout="@layout/in_information_work"/>

    <com.jyh.com.jyh.View.MyButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_20dp"
        android:layout_marginRight="@dimen/common_20dp"
        android:background="@drawable/button_background_color"
        android:text="@string/loan_name_loan_next_step"
        android:textColor="@color/white"
        android:textSize="@dimen/common_14dp" />

</LinearLayout>
